project/stage/tests/accept/empty_functions/w_params/single_param/void_func_int_arr_param.ul
void f12345098_234fXx_ (     int [234] _234JKDd
) { }
