project/stage/tests/reject/bad_var_decl/after_empty_statement.ul
float b(int [09] goodParam) {
    ;int m;
}
